# vini_data_api_docs

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
API/: index.html
arquitetura/: index.html
checklist/: index.html
docs/: API.md  arquitetura.md  checklist.md  index.md  projeto.md  requisitos.md
projeto/: index.html
requisitos/: index.html
search/: search_index.json
